cmake_minimum_required(VERSION 3.28)
project(midsem)

set(CMAKE_CXX_STANDARD 17)

add_executable(midsem
        calculator.cpp
        bubblesort_numbers.cpp
        char_count_in_str.cpp
        bubblesort_names.cpp
        multiplication_table.cpp
        missing_digits.cpp
        even_numbers.cpp
        product_of_digits_of_num.cpp
        factorial.cpp
        armstrong.cpp
        prime.cpp
        odd-even.cpp
        simple-interest.cpp
        stack.cpp
        queue.cpp
        missing_digits_2.cpp)
